welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:1: error: too many arguments for method estSurBiscuit: ()Boolean
while(! estSurBiscuit(l)){avance();
                     ^